# CDATA-public

./: .gitignore  CDATA_Theory_Final.docx  CDATA_Theory_Full_Article.docx  CLAUDE.md  CONCEPT.md  Cargo.toml  HIERARCHY_ANALYSIS.md  KNOWLEDGE.md  LINKS.md  MAP.md  MEMORY.md  PARAMETERS.md  PARAMETER_MAP.md  PEER_REVIEW_ROUND6.md  PROMPT.md  README.md  RECOMMENDATION.md  TODO.md  UPGRADE.md  finalize_article.py  fix_article.py  fix_article2.py  fix_article3.py  make_asymmetric_figure.py  make_thesis_figures.py  make_thesis_figures_en.py  make_thesis_figures_final.py  run.sh  write_article.py
Articles/: CDATA_ExpValidation_v3.md  Centriolar Damage Accumulation Theory of Aging (CDATA) Digital Twin (DT).md  Centriolar damage as a driver of aging.docx  Centriolar damage as a driver of aging.md  Ze_and_Entropy.md
Horizon/: CLAUDE.md  CONCEPT.md  EIC_Pathfinder_CDATA_Application.docx  EIC_Pathfinder_CDATA_PartB.docx  EIC_Pathfinder_CDATA_PartB.md  EIC_Pathfinder_CDATA_PartB_v5.md  EIC_Pathfinder_CDATA_PartB_v6.md  EIC_Pathfinder_CDATA_PartB_v7.docx  EIC_Pathfinder_CDATA_PartB_v7.md  HORIZON_GRANT_STRATEGY.docx  (+9 more)
crates/cell_dt_core/: Cargo.toml  README.md
crates/cell_dt_core/src/: agent_population.rs  components.rs  lib.rs  population.rs  simulation.rs  ze_validation.rs
crates/cell_dt_core/src/components/: asymmetric_inheritance.rs  chip_state.rs  inflammaging_state.rs  mitochondrial_state.rs  mod.rs  senescence_trigger.rs  tissue_state.rs  youth_protection.rs
crates/cell_dt_core/src/parameters/: fixed_params.rs
crates/cell_dt_io/: Cargo.toml
crates/cell_dt_io/src/: cdata_exporter.rs  lib.rs
crates/cell_dt_modules/human_development_module/: Cargo.toml
crates/cell_dt_modules/human_development_module/src/: actin_ring.rs  aging.rs  atpenergy.rs  caii_organism.rs  chromatin.rs  clone_epigenetic.rs  damage.rs  er_stress.rs  extracellular_matrix.rs  fate_switching.rs  fibrosis.rs  gamma_ring.rs  genetic.rs  golgi.rs  hormonal_fertility.rs  hpa_axis.rs  ift.rs  inducers.rs  interventions.rs  lib.rs  lysosome.rs  metabolic_phenotype.rs  microtubule.rs  nmj.rs  organ.rs  organ_integration.rs  peroxisome.rs  ribosome.rs  ros_cascade.rs  sasp_diffusion.rs  social_stress.rs  thermodynamics.rs  vascular_niche.rs  ze_health.rs
crates/cell_dt_validation/: Cargo.toml
crates/cell_dt_validation/examples/: basic_simulation.rs  centenarian_prediction.rs  mcmc_calibration.rs  o2_dose_response.rs
crates/cell_dt_validation/src/: biomarkers.rs  calibration.rs  datasets.rs  lib.rs  validation.rs
(+46 files in other folders)
