[package]
name = "human_development_module"
version = "0.1.0"
edition = "2021"

[dependencies]
cell_dt_core = { path = "../../cell_dt_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rand = "0.8"

[dev-dependencies]
myeloid_shift_module = { path = "../myeloid_shift_module" }
